Fix the display of scrollbars

--- a/next-app/src/app/globals.css
+++ b/next-app/src/app/globals.css
@@ -53,3 +53,11 @@ button {
 .scoreboard td {
 	@apply px-5 py-2
 }
+
+body {
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
